# app_dev

./: docker-compose.yaml
lab2/lab2/: .gitignore  alembic.ini  clear_db.py  load_data.py  main.py  models.py  pyproject.toml  queries.py  update_data.py
lab2/lab2/migrations/versions/: 432ceed6091b_add_description_and_products_orders.py  f733bd21dda8_create_users_and_addresses_tables_in_.py
lab3/: README.md  main.py  models.py  pyproject.toml  schemas.py
lab3/controllers/: user_controller.py
lab3/repositories/: user_repository.py
lab3/scripts/: load_data.py  update_data.py
lab3/services/: user_service.py
lab4/: .coverage  README.md  main.py  models.py  pyproject.toml  schemas.py
lab4/controllers/: user_controller.py
lab4/repositories/: __init__.py  order_repository.py  product_repository.py  user_repository.py
lab4/scripts/: load_data.py  update_data.py
lab4/services/: __init__.py  order_service.py  user_service.py
lab4/tests/: conftest.py
lab4/tests/test_controllers/: test_user_routes.py
lab4/tests/test_repositories/: test_order_repository.py  test_product_repository.py  test_user_repository.py
lab4/tests/test_services/: test_order_service.py  test_user_service.py
