[project]
name = "lab3"
version = "0.1.0"
description = "lab3 dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "litestar>=2.18.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
