[project]
name = "lab4"
version = "0.1.0"
description = "lab4 dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "litestar>=2.18.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--verbose --color=yes --cov=."

[tool.coverage.run]
source = ["controllers", "repositories", "services"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

