[project]
name = "lab2"
version = "0.1.0"
description = "Code for lab2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
